# LayoutReader

./: .gitignore  CMakeLists.txt
Include/: GDSIITypes.hpp  GdsiiReader.hpp  GeometryWidget.hpp  LayerSelectWidget.hpp  LayoutData.hpp  LayoutReader.hpp  LayoutWidget.hpp  MskReader.hpp  PaintData.hpp
LayoutReader/: CMakeLists.txt
LayoutReader/Impl/: CMakeLists.txt  LayoutReader.cpp
LayoutReader/Impl/ReaderImpl/: GdsiiBinaryReader.cpp  MskReader.cpp
LayoutReader/Include/: GdsiiReader.hpp  LayoutData.hpp  LayoutReader.hpp  MskReader.hpp  TestModule.h
LayoutReader/Test/: CMakeLists.txt  LayoutReaderTest.cpp
LayoutReader/Test/MskFiles/: And2.MSK  LAB2mOR.MSK  Nand2.MSK  RD.MSK  RD2222.MSK  VASIG.MSK  dd2.MSK  example.MSK  finalochka.MSK  la3morgun.MSK  lab3neus.MSK  laba1.MSK  nor3.msk  out.msk
Libs/: CMakeLists.txt
Libs/LayoutReader/: CMakeLists.txt
Libs/LayoutReader/Impl/: CMakeLists.txt
Libs/LayoutReader/Impl/Helpers/: GDSIIHelperFunctions.cpp
Libs/LayoutReader/Impl/ReaderImpl/: GdsiiBinaryReader.cpp  MskReader.cpp
Libs/LayoutReader/Test/: LayoutReaderTest.cpp
Libs/LayoutReader/Test/MskFiles/: 2LABA.MSK  4.MSK  Dan_gra_lab3.MSK  LAB3MCRW.MSK  MOE.MSK  MORGUNLAB2.MSK  RD1.MSK  RD2.MSK  ddd1.MSK  dfdf.MSK  jfjhgjhgb,jgbjhvjvbv.MSK  la31morgun.MSK  lab3v.MSK  labb1.MSK  skor.MSK
Libs/LayoutWidget/: CMakeLists.txt
Libs/LayoutWidget/Impl/: CMakeLists.txt  GeometryWidget.cpp  LayerSelectWidget.cpp  LayoutWidget.cpp
Libs/LayoutWidget/Test/: CMakeLists.txt  widget.test.cpp
cmake/modules/: UnitTestModule.cmake
