set(TARGET_NAME LayoutReader)

file(GLOB_RECURSE READER_SOURCE_LIST *.cpp)
file(GLOB_RECURSE READER_HEADER_LIST *.h *.hpp)

message(DEBUG ${READER_HEADER_LIST} ${READER_SOURCE_LIST})

add_library(${TARGET_NAME} STATIC ${READER_SOURCE_LIST} ${READER_HEADER_LIST})
target_include_directories(${TARGET_NAME} PUBLIC ${SHARED_INCLUDE_DIRS})